normalized prices in ChestShopEntry are now represented with a BigDecimal